# docx

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/agents/: document.renderer.agent.md
.github/config/: docx-render.defaults.yml
.github/prompts/: render-docx.prompt.md  render-from-manifest.prompt.md
.github/scripts/: README.md  render.sh  update_manifest.py
.github/skills/python/: SKILL.md
.github/specs/: session-manifest.spec.md
scripts/: md_to_docx.py
sessions/example/: session.manifest.yml  source.md
sessions/example/output/: 202601031321.docx  20260103132914.docx  20260103133145.docx  20260103133552.docx  20260103135809.docx
src/md_to_docx/: __init__.py  cli.py
templates/word/: template.docx
tests/: __init__.py  conftest.py  test_cli.py  test_convert.py  test_validation.py
